--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 base_url = "https://tsvldb.com"
-title = "Public Notes"
-description = "Public Notes"
+title = "tsvldb"
+description = "A Private Low Entropy Broadcast"
 author = "Andrii Tsvielodub"
 theme = "tabi"
 generate_feeds = true
@@ -238,6 +238,7 @@ invert_title_order = false
 #]
 menu = [
     { name = "Posts", url = "posts", trailing_slash = true },
+    { name = "Shorts", url = "shorts", trailing_slash = true },
     #    { name = "Projects", url = "projects", trailing_slash = true },
     #    { name = "About Me", url = "about-me", trailing_slash = true },
 ]
